<resources>
    <string name="app_name">BenGrocer</string>
    <string name="Open">BenGrocer</string>
    <string name="Close">BenGrocer</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="search">Search...</string>
    <string name="confirn_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="ic_no">IC NO</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="salary">Salary</string>
    <string name="create_staff">Create Staff</string>
    <string name="exp_email">e.g. abc@gmail.com</string>
    <string name="exp_password">e.g. 123456</string>
    <string name="exp_confirm">e.g. 123456</string>
    <string name="exp_address">e.g. B 18, Jalan Prima Setapak</string>
    <string name="exp_ic">e.g. 951010016043</string>
    <string name="exp_name">e.g. Liang Wei</string>
    <string-array name="positions">
        <item>Manager</item>
        <item>Inventory Staff</item>
        <item>Cashier</item>
    </string-array>
    <string name="exp_sal">e.g. 3211</string>

    <!-- temp -->
    <string name="manager">Manager</string>
    <string name="inventory_staff">Inventory Staff</string>
    <string name="cashier">Cashier</string>
    <string name="staff">Staff</string>
    <string name="member">Member</string>
    <string name="stock">Stock</string>
    <string name="pos">Pos</string>
    <string name="MemberID">Mamber ID</string>
    <string name="MemberName">Member Name</string>
    <string name="StaffID">Staff ID</string>
    <string name="StaffName">Staff Name</string>
    <string name="Clear">Clear</string>
    <string name="Pay">Pay</string>
    <string name="ScanID">Scan ID</string>
    <string name="POSSystem">POS System</string>
    <string name="StockBtn">Stock</string>
    <string name="ReportBtn">Report</string>
    <string name="SupplierBtn">Supplier</string>
    <string name="sid">sid</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="fname">First Name</string>
    <string name="hpno">HPNO</string>
    <string name="lname">Last Name</string>
    <string name="card">M_Card_No</string>
    <string name="point">Points</string>
    <string name="status">Status</string>
    <string name="exp_fname">Desmond</string>
    <string name="exp_hpno">01223245867</string>
    <string name="exp_lname">Chow</string>
    <string name="exp_card">980000001</string>
    <string name="exp_point">149</string>
    <string name="exp_status">Active</string>
    <string name="create_member">Create Member</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add">Add</string>
    <string name="title_activity_stock_mgmt">StockMgmt</string>
    <string name="StockName">Name</string>
    <string name="Barcode">Barcode</string>
    <string name="StockDescription">Description</string>
    <string name="Quantity">Quantity</string>
    <string name="Price">Price</string>
    <string name="Category">Category</string>
    <string name="SupName">Supplier Name</string>
    <string name="done">Done</string>
    <string name="Remove">Remove</string>
    <string name="Insert">Insert</string>
    <string name="Total">Total:</string>
    <string name="InsertItemID">Insert Item ID</string>
    <string name="ItemID">Item ID</string>
    <string name="ItemName">Item Name</string>
    <string name="ItemQuantity">Qty</string>
    <string name="Price1">Price (RM)</string>
    <string name="SubTotal">Sub Total</string>
    <string name="userPayAmount">User Pay Amount</string>
    <string name="RM">(RM)</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="Quantity">Quantity</string>
    <string name="Price">Price</string>
</resources>
