<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/StockName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/StockName"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="25dp" />

        <TextView
            android:id="@+id/barView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Barcode" />

        <EditText
            android:id="@+id/stockBarcode2"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Barcode"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="25dp" />

        <TextView
            android:id="@+id/barView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StockDescription" />

        <EditText
            android:id="@+id/stockDesc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/StockDescription"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="25dp" />

        <TextView
            android:id="@+id/barView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Quantity" />

        <EditText
            android:id="@+id/QttyEdit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Quantity"
            android:inputType="number" />

        <TextView
            android:id="@+id/barView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Price" />

        <EditText
            android:id="@+id/PriceEditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/barView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Category" />

        <EditText
            android:id="@+id/cateEdit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="25dp" />

        <TextView
            android:id="@+id/barView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SupName" />

        <EditText
            android:id="@+id/suppName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="25dp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/Delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.931"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/Save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>